fix: Scrollable math block on small screen

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -8,6 +8,10 @@
     @apply inline-block;
   }
 
+  &.math-display {
+    @apply overflow-x-auto;
+  }
+
   &.math-display svg {
     @apply block mx-auto;
   }
